--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -39,14 +39,208 @@ body {
     font-size: 30px;
     text-align: center;
   }
-.card1{
+.card1 {
     cursor: pointer;
     float: left;
     text-align: center;
-    width: 200px; /* Ancho de cada carta */
+    width: 30%; /* Ancho de cada carta */
     height: 300px; /* Alto de cada carta */
     margin: 10px; /* Margen entre las cartas */
     border-radius: 10px;
     border: 1px solid #ccc;
     background-color: #b2e97e;
+    transition: transform 0.3s;
 }
+
+
+section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+    background-color: red;
+    background-color: #424949;
+}
+
+article {
+    text-align: center;
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    background-color: #333;
+    transition: transform 0.3s;
+    /margin-left: 5%;/
+    color: white;
+    font-family: Verdana;
+    font-size: 15px;
+}
+
+article:hover {
+    transform: scale(1.05); /* Escala el elemento en un 10% más grande cuando pasas el mouse sobre él */
+}
+
+iframe {
+    width: 90%;
+    height: 70%
+}
+
+
+/*<!-- Estilo para formulario PopUp -->*/
+
+/* Estilos para el popup */
+/*Con media, puedo hacer condiciones como preguntar si la pantalla tiene un máximo de 768px y 
+    si esta condicion se cumple se ejecutan los estilos que se encuentran dentro de las llaves
+    de esta condición, generalmente es el tamaño máximo de una tablet
+*/
+@media (max-width: 768px) {
+    /* Estilos para el overlay de fondo */
+    .overlay {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+        z-index: 1;
+    }
+
+    .popup {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        /*transform: translate(-50%, -50%);*/
+        width: 90%;
+        height: 90%;
+        background-color: #60a803;
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        z-index: 2;
+        border-radius: 5px;
+        color: white;
+        align-items: center;
+        align-content: center;
+        text-align: center;
+    }
+
+        /* Estilos para el formulario dentro del popup */
+        .popup form {
+            text-align: center;
+            width: 90%
+        }
+}
+
+/*Ahora pregunto si el minimo de la pantalla es de 769px se ejecutan los siguientes estilos*/
+@media (min-width: 769px) {
+    /* Estilos para el overlay de fondo */
+    .overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+        z-index: 1;
+    }
+
+    .popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        /*background-color: #60a803;*/
+        background: linear-gradient(#60a803, #8de933);
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        z-index: 2;
+        border-radius: 5px;
+        color: white;
+        align-items: center;
+        align-content: center;
+        text-align: center;
+    }
+        /* Estilos para el formulario dentro del popup */
+        .popup form {
+            text-align: center;
+            width: 90%
+        }
+}
+
+/* Estilos para el botón que abre el popup */
+.open-popup-button {
+    cursor: pointer;
+    background-color: #B03A2E;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 20px; /* Ajusta la distancia desde la parte inferior según tu preferencia */
+    right: 20px; /* Ajusta la distancia desde la derecha según tu preferencia */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
+    text-align: center;
+}
+
+.open-popup-button:hover {
+    background-color: #641E16; /* Cambio de color al pasar el mouse por encima */
+}
+
+/* Estilos para el botón de cierre del popup */
+.close-popup-button {
+    cursor: pointer;
+    background-color: #e74c3c; /* Rojo */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+/* Estilos para los campos del formulario */
+.popup input[type="text"],
+.popup input[type="email"],
+.popup textarea {
+    width: 100%;
+    padding: 10px;
+    /*margin: 5px 0;*/
+    margin-left: 2.5%;
+    border: 1px solid #2ecc71;
+    border-radius: 5px;
+}
+
+/* Estilos para el botón de envío */
+.popup input[type="submit"] {
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Estilos para el botón que envia mail */
+.button-enviar {
+    cursor: pointer;
+    background-color: #B03A2E;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    bottom: 20px; /* Ajusta la distancia desde la parte inferior según tu preferencia */
+    right: 20px; /* Ajusta la distancia desde la derecha según tu preferencia */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
+    text-align: center;
+}
+
+.button-enviar:hover {
+    background-color: #641E16; /* Cambio de color al pasar el mouse por encima */
+}
+
+/*<!-- ---- FIN - Estilo para formulario PopUp ---- -->*/
