--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,11 +10,23 @@ body {
 }
 
 header {
-    background-color: #b6df9f;
-    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
+    color: #000000;
     text-align: center;
     padding: 0px;
-    position: relative;
+    transition: background-color 0.5s ease;
+}
+
+header.scrolled {
+    background-color: #fff;
+}
+
+header.scrolled nav a {
+    color: #000;
 }
 
 nav {
@@ -23,7 +40,7 @@ nav ul {
     font-size: 25px;
     text-align: right;
     list-style-type: none;
-    background-color: #60a803;
+    background-color: #ffffff;
     margin: 0;
     content: inherit;
     padding: 0;
@@ -37,7 +54,7 @@ nav li {
 }
 
 nav a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 }
 
