Modificando estilos y mejora de navegabilidad
Estoy ordenando principalmente CSS, utilizando metodología BEM para organizarlo, agregué un nombre para nuestro producto y una descripción. Aún falta, seguiré trabajando. Los colores fuertes son solamente para tener una visualización de los tamaños y posiciones de las cajas.

--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -14,7 +14,7 @@ header {
     flex-direction: column;
     align-items: flex-start;
     position: relative;
-    background-color: #82b8ff;
+    background-color: #58a0ff;
     color: #222020;
     text-align: center;
     padding: 0px;
