--- a/Tecnología para la Tercera Edad/css/tutoriales.css
+++ b/Tecnología para la Tercera Edad/css/tutoriales.css
@@ -5,8 +5,8 @@ body {
   }
   
   header {
-    background-color: #b6df9f;
-    color: #fff;
+    background-color: #a7e952;
+    color: #222020;
     text-align: center;
     padding: 20px;
   }
@@ -17,7 +17,7 @@ body {
     list-style-type: none;
     background-color: #60a803;
     margin: 0;
-    padding: 0;
+    padding: 10px;
   }
   
   nav li {
@@ -26,15 +26,16 @@ body {
   }
   
   nav a {
-    color: #fff;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 25px;
+    color: #fff;
   }
-  
   main {
     margin: 20px;
     padding: 20px;
   }
-  
+
   .card1 {
     cursor: pointer;
     float: left;
@@ -44,7 +45,9 @@ body {
     margin: 10px; /* Margen entre las cartas */
     border-radius: 10px;
     border: 1px solid #ccc;
-    background-color: #b2e97e;
+    background-color: #71d117;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
+    transition: transform 0.3s;
     /*font-size: 20px;
     font-family: Arial, sans-serif;
     background-color: #9bd1a7;
@@ -56,7 +59,100 @@ body {
     padding-left: 5px;
     border-radius: 15px;*/
   }
+
+  ul:hover{
+    transform: scale(1.05);
+  }
 button :hover{
   cursor: pointer;
     font-family: Arial, sans-serif;
+   
 }
+
+.entrar {
+  background-color: #a8eb51; /* Cambia el color del botón */
+    color: #fff;
+    border: none;
+    border-radius: 25px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.logo {
+  margin-right: 20px; /* Espacio entre el logo y el título */
+  
+}
+
+.logo img {
+  transition: transform 0.3s;; /* Duración de la transición y propiedad a animar */
+}
+
+.logo img:hover {
+  transform: scale(1.2); /* Opacidad reducida */
+}
+
+h1 {
+  font-size: 24px; /* Tamaño del título */
+}
+
+
+footer {
+  background-color: #a7e952;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.contactos ul,
+.redes-sociales ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contactos ul li,
+.redes-sociales ul li {
+  margin: 5px 0;
+}
+
+.buscador {
+  margin-top: 20px;
+}
+
+/* Estilos para los enlaces en el footer */
+footer a {
+  color: #0c0c0c;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+/* Estilos para el buscador */
+.buscador {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.buscador input[type="text"] {
+  padding: 10px;
+  border: none;
+  border-radius: 25px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 200px; /* Ajusta el ancho según tus necesidades */
+}
+
+.buscador button {
+  background-color: #60a803; /* Cambia el color del botón */
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 20px;
+  margin-left: -50px; /* Mueve el botón a la izquierda para superponerlo al campo de entrada */
+  cursor: pointer;
+}
+
+/* Estilos para el botón al pasar el mouse */
+.buscador button:hover {
+  background-color: #79d13f; /* Cambia el color al pasar el mouse */
+}
+
