--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -5,7 +5,7 @@ body {
   }
   
   header {
-    background-color: #567a40;
+    background-color: #a7e952;
     color: #222020;
     text-align: center;
     padding: 20px;
@@ -50,7 +50,7 @@ body {
     margin: 10px; /* Margen entre las cartas */
     border-radius: 10px;
     border: 1px solid #ccc;
-    background-color: #b2e97e;
+    background-color: #60a803;
     transition: transform 0.3s;
 }
 
@@ -268,7 +268,7 @@ h1 {
 
 /* Estilos para el footer */
 footer {
-    background-color: #567a40;
+    background-color: #a7e952;
     color: #fff;
     padding: 20px;
     text-align: center;
