--- a/Tecnología para la Tercera Edad/css/tutorialCG.css
+++ b/Tecnología para la Tercera Edad/css/tutorialCG.css
@@ -5,8 +5,8 @@ body {
   }
   
   header {
-    background-color: #b6df9f;
-    color: #fff;
+    background-color: #a7e952;
+    color: #222020;
     text-align: center;
     padding: 20px;
   }
@@ -17,7 +17,7 @@ body {
     list-style-type: none;
     background-color: #60a803;
     margin: 0;
-    padding: 0;
+    padding: 10px;
   }
   
   nav li {
@@ -26,11 +26,30 @@ body {
   }
   
   nav a {
-    color: #fff;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 25px;
+    color: #fff;
   }
   
   main {
     margin: 20px;
     padding: 20px;
   }
+
+  h1 {
+    font-size: 24px; /* Tamaño del título */
+}
+
+.logo {
+  margin-right: 20px; /* Espacio entre el logo y el título */
+  
+}
+
+.logo img {
+  transition: transform 0.3s;; /* Duración de la transición y propiedad a animar */
+}
+
+.logo img:hover {
+  transform: scale(1.2); /* Opacidad reducida */
+}
