--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -1,352 +1,338 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-    background-color: #58a0ff;
-    color: #222020;
-    text-align: center;
-    padding: 0px;
-    transition: background-color 0.5s ease;
-}
-
-header.scrolled {
-    background-color: #fff;
-}
-
-header.scrolled nav a {
-    color: #000;
-}
-
-nav {
-    margin: 0em;
-    position: absolute;
-    top: 25px;
-    right: 0px;
-}
-
-nav ul {
-    font-size: 25px;
-    text-align: right;
-    list-style-type: none;
-    margin: 0;
-    content: inherit;
-    padding: 0;
-    display: inline;
-}
-
-nav li {
-    display: inline;
-    content: inherit;
-    margin: 10px;
-}
-
-nav a {
-    color: #000000;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #000;
-    transition: 1s;
-}
-
-.descripcion {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    position: relative;
-}
-
-.descripcion__h2 {
-    display: inline-block;
-    background-color: green;
-    margin: 10px;
-    width: 50%;
-    font-size: 50px;
-}
-
-.descripcion__p {
-    display: inline-block;
-    font-size: 24px;
-    text-align: left;
-    background-color: blue;
-    margin: 10px;
-    width: 50%;
-}
-
-.card1 {
-    cursor: pointer;
-    float: left;
-    text-align: center;
-    width: 30%;
-    /* Ancho de cada carta */
-    height: 300px;
-    /* Alto de cada carta */
-    margin: 10px;
-    /* Margen entre las cartas */
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    background-color: #b2e97e;
-    transition: transform 0.3s;
-}
-
-section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: stretch;
-    background-color: red;
-    background-color: #424949;
-}
-
-article {
-    text-align: center;
-    width: 90%;
-    padding: 10px;
-    margin: 10px;
-    background-color: #333;
-    transition: transform 0.3s;
-    margin-left: 5%;
-    color: white;
-    font-family: Verdana;
-    font-size: 15px;
-}
-
-article:hover {
-    transform: scale(1.05);
-    /* Escala el elemento en un 10% más grande cuando pasas el mouse sobre él */
-}
-
-iframe {
-    width: 90%;
-    height: 70%
-}
-
-
-/*<!-- Estilo para formulario PopUp -->*/
-
-
-/* Estilos para el popup */
-
-
-/*Con media, puedo hacer condiciones como preguntar si la pantalla tiene un máximo de 768px y 
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Josefin Sans', sans-serif;
+    }
+    
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .encabezado {
+        background-image: linear-gradient(315deg, #41d2d5, rgb(118, 118, 255) 70%);
+    }
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        position: relative;
+        color: #222020;
+        text-align: center;
+        padding: 0px;
+        transition: background-color 0.5s ease;
+    }
+    
+    header.scrolled {
+        position: sticky;
+        top: 0;
+        background-color: #ffffff;
+    }
+    
+    nav {
+        margin: 0em;
+        position: absolute;
+        top: 25px;
+        right: 0px;
+    }
+    
+    nav ul {
+        font-size: 25px;
+        text-align: right;
+        list-style-type: none;
+        margin: 0;
+        content: inherit;
+        padding: 0;
+        display: inline;
+    }
+    
+    nav li {
+        display: inline;
+        content: inherit;
+        margin: 10px;
+    }
+    
+    nav a {
+        color: #000000;
+        text-decoration: none;
+    }
+    
+    a:hover {
+        color: #000;
+        transition: 1s;
+    }
+    
+    .descripcion {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        position: relative;
+    }
+    
+    .descripcion__h2 {
+        display: inline-block;
+        margin: 10px;
+        width: 50%;
+        font-size: 50px;
+        position: relative;
+        padding: 20px;
+    }
+    
+    .descripcion__p {
+        display: inline-block;
+        font-size: 24px;
+        text-align: left;
+        margin: 10px;
+        width: 50%;
+        color: white;
+        position: relative;
+        padding: 20px;
+        text-shadow: 1px 1px 30px #000;
+    }
+    
+    .card1 {
+        cursor: pointer;
+        float: left;
+        text-align: center;
+        width: 30%;
+        /* Ancho de cada carta */
+        height: 300px;
+        /* Alto de cada carta */
+        margin: 10px;
+        /* Margen entre las cartas */
+        border-radius: 10px;
+        border: 1px solid #ccc;
+        background-color: #b2e97e;
+        transition: transform 0.3s;
+    }
+    
+    section {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+        align-content: stretch;
+        background-color: red;
+        background-color: #424949;
+    }
+    
+    article {
+        text-align: center;
+        width: 90%;
+        padding: 10px;
+        margin: 10px;
+        background-color: #333;
+        transition: transform 0.3s;
+        margin-left: 5%;
+        color: white;
+        font-family: Verdana;
+        font-size: 15px;
+    }
+    
+    article:hover {
+        transform: scale(1.05);
+        /* Escala el elemento en un 10% más grande cuando pasas el mouse sobre él */
+    }
+    
+    iframe {
+        width: 90%;
+        height: 70%
+    }
+    /*<!-- Estilo para formulario PopUp -->*/
+    /* Estilos para el popup */
+    /*Con media, puedo hacer condiciones como preguntar si la pantalla tiene un máximo de 768px y 
     si esta condicion se cumple se ejecutan los estilos que se encuentran dentro de las llaves
     de esta condición, generalmente es el tamaño máximo de una tablet
 */
-
-@media (max-width: 768px) {
-    /* Estilos para el overlay de fondo */
-    .overlay {
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        /* Fondo semitransparente */
-        z-index: 1;
+    
+    @media (max-width: 768px) {
+        /* Estilos para el overlay de fondo */
+        .overlay {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            /* Fondo semitransparente */
+            z-index: 1;
+        }
+        .popup {
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            /*transform: translate(-50%, -50%);*/
+            width: 90%;
+            height: 90%;
+            background-color: #60a803;
+            padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+            border-radius: 5px;
+            color: white;
+            align-items: center;
+            align-content: center;
+            text-align: center;
+        }
+        /* Estilos para el formulario dentro del popup */
+        .popup form {
+            text-align: center;
+            width: 90%
+        }
     }
-    .popup {
-        display: none;
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        /*transform: translate(-50%, -50%);*/
-        width: 90%;
-        height: 90%;
-        background-color: #60a803;
-        padding: 20px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        z-index: 2;
-        border-radius: 5px;
+    /*Ahora pregunto si el minimo de la pantalla es de 769px se ejecutan los siguientes estilos*/
+    
+    @media (min-width: 769px) {
+        /* Estilos para el overlay de fondo */
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            /* Fondo semitransparente */
+            z-index: 1;
+        }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            /*background-color: #60a803;*/
+            background: linear-gradient(#60a803, #8de933);
+            padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+            border-radius: 5px;
+            color: white;
+            align-items: center;
+            align-content: center;
+            text-align: center;
+        }
+        /* Estilos para el formulario dentro del popup */
+        .popup form {
+            text-align: center;
+            width: 90%
+        }
+    }
+    /* Estilos para el botón que abre el popup */
+    
+    .open-popup-button {
+        cursor: pointer;
+        background-color: #B03A2E;
         color: white;
-        align-items: center;
-        align-content: center;
-        text-align: center;
-    }
-    /* Estilos para el formulario dentro del popup */
-    .popup form {
-        text-align: center;
-        width: 90%
-    }
-}
-
-
-/*Ahora pregunto si el minimo de la pantalla es de 769px se ejecutan los siguientes estilos*/
-
-@media (min-width: 769px) {
-    /* Estilos para el overlay de fondo */
-    .overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        /* Fondo semitransparente */
-        z-index: 1;
-    }
-    .popup {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /*background-color: #60a803;*/
-        background: linear-gradient(#60a803, #8de933);
-        padding: 20px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        z-index: 2;
+        border: none;
+        padding: 10px 20px;
         border-radius: 5px;
+        position: fixed;
+        bottom: 20px;
+        /* Ajusta la distancia desde la parte inferior según tu preferencia */
+        right: 20px;
+        /* Ajusta la distancia desde la derecha según tu preferencia */
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        /* Sombra */
+        text-align: center;
+    }
+    
+    .open-popup-button:hover {
+        background-color: #641E16;
+        /* Cambio de color al pasar el mouse por encima */
+    }
+    /* Estilos para el botón de cierre del popup */
+    
+    .close-popup-button {
+        cursor: pointer;
+        background-color: #e74c3c;
+        /* Rojo */
         color: white;
-        align-items: center;
-        align-content: center;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    /* Estilos para los campos del formulario */
+    
+    .popup input[type="text"],
+    .popup input[type="email"],
+    .popup textarea {
+        width: 100%;
+        padding: 10px;
+        /*margin: 5px 0;*/
+        margin-left: 2.5%;
+        border: 1px solid #2ecc71;
+        border-radius: 5px;
+    }
+    /* Estilos para el botón de envío */
+    
+    .popup input[type="submit"] {
+        background-color: #2ecc71;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    /* Estilos para el botón que envia mail */
+    
+    .button-enviar {
+        cursor: pointer;
+        background-color: #B03A2E;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        bottom: 20px;
+        /* Ajusta la distancia desde la parte inferior según tu preferencia */
+        right: 20px;
+        /* Ajusta la distancia desde la derecha según tu preferencia */
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        /* Sombra */
         text-align: center;
     }
-    /* Estilos para el formulario dentro del popup */
-    .popup form {
-        text-align: center;
-        width: 90%
+    
+    .button-enviar:hover {
+        background-color: #641E16;
+        /* Cambio de color al pasar el mouse por encima */
     }
-}
-
-
-/* Estilos para el botón que abre el popup */
-
-.open-popup-button {
-    cursor: pointer;
-    background-color: #B03A2E;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    position: fixed;
-    bottom: 20px;
-    /* Ajusta la distancia desde la parte inferior según tu preferencia */
-    right: 20px;
-    /* Ajusta la distancia desde la derecha según tu preferencia */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    /* Sombra */
-    text-align: center;
-}
-
-.open-popup-button:hover {
-    background-color: #641E16;
-    /* Cambio de color al pasar el mouse por encima */
-}
-
-
-/* Estilos para el botón de cierre del popup */
-
-.close-popup-button {
-    cursor: pointer;
-    background-color: #e74c3c;
-    /* Rojo */
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-
-/* Estilos para los campos del formulario */
-
-.popup input[type="text"],
-.popup input[type="email"],
-.popup textarea {
-    width: 100%;
-    padding: 10px;
-    /*margin: 5px 0;*/
-    margin-left: 2.5%;
-    border: 1px solid #2ecc71;
-    border-radius: 5px;
-}
-
-
-/* Estilos para el botón de envío */
-
-.popup input[type="submit"] {
-    background-color: #2ecc71;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-
-/* Estilos para el botón que envia mail */
-
-.button-enviar {
-    cursor: pointer;
-    background-color: #B03A2E;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    bottom: 20px;
-    /* Ajusta la distancia desde la parte inferior según tu preferencia */
-    right: 20px;
-    /* Ajusta la distancia desde la derecha según tu preferencia */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    /* Sombra */
-    text-align: center;
-}
-
-.button-enviar:hover {
-    background-color: #641E16;
-    /* Cambio de color al pasar el mouse por encima */
-}
-
-
-/*<!-- ---- FIN - Estilo para formulario PopUp ---- -->*/
-
-
-/* LOGO */
-
-.header__h1 {
-    display: inline-block;
-    position: absolute;
-    top: 25px;
-    left: 0;
-    text-align: left;
-    font-size: 35px;
-}
-
-.logo {
-    display: inline-block;
-    position: relative;
-    text-align: center;
-    width: 100%;
-    /* Espacio entre el logo y el título */
-}
-
-.logo img {
-    transition: transform 0.3s;
-    ;
-    /* Duración de la transición y propiedad a animar */
-}
-
-.logo img:hover {
-    transform: scale(1.1);
-    /* Opacidad reducida */
-}
+    /*<!-- ---- FIN - Estilo para formulario PopUp ---- -->*/
+    /* LOGO */
+    
+    .header__h1 {
+        display: inline-block;
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        text-align: left;
+        font-size: 35px;
+        font-family: 'Agbalumo', sans-serif;
+        font-weight: 1;
+    }
+    
+    .logo {
+        display: inline-block;
+        position: relative;
+        text-align: center;
+        width: 100%;
+        /* Espacio entre el logo y el título */
+    }
+    
+    .logo img {
+        transition: transform 0.3s;
+        ;
+        /* Duración de la transición y propiedad a animar */
+    }
+    
+    .logo img:hover {
+        transform: scale(1.1);
+        /* Opacidad reducida */
+    }
