--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -105,7 +105,7 @@
         /* Margen entre las cartas */
         border-radius: 10px;
         border: 1px solid #ccc;
-        background-color: #b2e97e;
+        background-color: #60a803;
         transition: transform 0.3s;
     }
     
